Added SingleChartHandler and ChartBuilder classes to handle chart requests updaated CoinGeckoService to use mock data for testing updated WebServer to include new chart endpoints updated pom.xml to include new dependencies and configurations